src/main/jkube/gateway-cr.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway-https
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: minibin-credential # must be the same as secret
    hosts:
    - mini.example.com
